force-app/main/default/objects/Hospitality__c/Hospitality__c.object-meta.xml
<CustomObject>
    <label>Hospitality</label>
    <nameField>
        <label>Hospitality Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hospitalities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>