force-app/main/default/objects/Hospitality__c/fields/Completed_Restaurant_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Completed_Restaurant_Bookings__c</fullName>
    <label>Completed Restaurant Bookings</label>
    <summaryForeignKey>Guest_Reservation__c.Hospitality__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>