force-app/main/default/objects/Hospitality__c/recordTypes/Hospitality_as_Hotel.recordType-meta.xml
<RecordType>
    <fullName>Hospitality_as_Hotel</fullName>
    <active>true</active>
    <label>Hospitality as Hotel</label>
</RecordType>