force-app/main/default/objects/Hospitality__c/recordTypes/Hospitality_as_Resaturant.recordType-meta.xml
<RecordType>
    <fullName>Hospitality_as_Resaturant</fullName>
    <active>true</active>
    <label>Hospitality as Resaturant</label>
</RecordType>